@@ -1,3 +1,9 @@
+2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>
+
+	Fixes #336286
+
+	* themus-theme-applier.c (main): switched from popt to GOptionContext.
+
 2006-07-23  Sebastien Bacher  <seb128@debian.org>
 
 	* theme-method.directory.in: add encoding key, 
